--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,15 @@
   "name": "UI fixer",
   "version": "1.0",
   "description": "This extension fixes a few things in UI",
-  "permissions": [ "tabs"],
-  "icons": {
-    "16":  "icon16.png",
-    "48":  "icon48.png",
-    "128": "icon128.png"
-  },
+
+  "permissions": ["tabs", "storage"],
+
+  "icons": {"16": "icon16.png", "48": "icon48.png", "128": "icon128.png"},
+
   "page_action": {
-    "default_icon": {
-      "19": "icon19.png",
-      "38": "icon38.png"
-    },
-    "default_title": "UI fixer"
+    "default_icon":  {"19": "icon19.png", "38": "icon38.png"},
+    "default_title": "UI fixer",
+    "default_popup": "popup.html"
   },
 
   "content_scripts": [
