--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "UI fixer",
   "version": "1.0",
-  "description": "This extension fixes a few things in UI",
+  "description": "Chrome extension that lets you customize a few things in Maxymiser UI",
 
   "permissions": ["tabs", "storage"],
 
