--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "UI fixer",
-  "version": "1.5",
-  "description": "Lets you customize a few things in Maxymiser UI",
+  "version": "1.6",
+  "description": "Customize your Maxymiser UI experience",
 
   "permissions": ["tabs", "storage"],
 
